# forrit

./: .gitignore  Cargo.toml  LICENSE  README.md  arch.drawio  biome.json  config.example.toml  flake.nix  justfile  kanpilot.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  docker.yml
bangumi/: Cargo.toml
bangumi/src/: api.rs  endpoints.rs  error.rs  lib.rs  model.rs
clients/rust/: Cargo.toml
clients/rust/src/: error.rs  index.rs  lib.rs  resource.rs
clients/typescript/: .gitignore  package.json  tsconfig.json
clients/typescript/src/: index.ts  schema.ts
draft/: arch.drawio  design.md
forrit-cli/: Cargo.toml
forrit-cli/src/: main.rs
forrit-cli/src/cli/: mod.rs
forrit-core/: Cargo.toml
forrit-core/src/: error.rs  lib.rs  model.rs
forrit-core/src/downloader/: mod.rs
forrit-core/src/notification/: mod.rs
forrit-core/src/sites/: mod.rs
forrit-ractor/: Cargo.toml
forrit-ractor/src/: config.rs  download.rs  main.rs  source.rs
forrit-server/: Cargo.toml  sub
forrit-server-legacy/: Cargo.toml
forrit-server-legacy/src/: config.rs  error.rs
forrit-server-legacy/src/downloaders/: transmission.rs
forrit-server/src/: config.rs  download.rs  error.rs  event.rs  ext.rs  main.rs  server.rs  source.rs  util.rs
forrit-server/src/download/: mod.rs  qbittorrent.rs  transmission.rs
forrit-server/src/downloaders/: mod.rs  transmission.rs
forrit-server/src/notify/: mod.rs  telegram.rs
forrit-server/src/sites/: bangumi.rs
forrit-web/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
forrit-web/app/: layout.tsx  page.tsx  shim.css
forrit-web/app/components/: Button.tsx  GlobalLayout.tsx
forrit-web/app/subscription/: hooks.ts  page.tsx
frontend/: .gitignore  kanpilot.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: client.ts  entry.client.tsx  root.tsx  util.ts
frontend/app/components/: blurry_image.tsx  loading.tsx  loading_infinite.tsx  meta_card.tsx  meta_detail_header.tsx  meta_preview.tsx  page_header.tsx  width_limit.tsx
frontend/app/components/download_list/: index.tsx
frontend/app/components/entry_list/: index.css  index.tsx  item.css  item.tsx
frontend/app/components/meta_card/: index.css  index.tsx  subscription.css  subscription.tsx
frontend/app/components/subscription_list/: form.tsx  index.tsx  item.css  item.tsx
frontend/app/routes/: _index.tsx  download._index.tsx  entry.$id.tsx  entry._index.tsx  entry.tsx  meta.$id.tsx  meta._index.tsx  subscription._index.tsx  subscription.tsx
integration/: Cargo.toml
integration/src/: main.rs
src/: api.rs  bangumi_moe.rs  config.rs  ext.rs  lib.rs  main.rs  model.rs  server.rs  util.rs
src/bangumi_moe/: api.rs  mod.rs  model.rs  v2.rs
src/cli/: config.rs  mod.rs  sub.rs
