[workspace]
members  = ["packages/*"]
resolver = "2"

[workspace.dependencies]

serde        = "1.0.195"
bangumi-data = "0.1.3"
chrono       = "0.4.35"
regex        = "1.10.3"
tracing      = "0.1.40"
tokio        = "1.35.1"

forrit-core   = { version = "0.1.0", path = "packages/core" }
forrit-client = { version = "0.1.0", path = "packages/core" }

futures    = { version = "0.3.30", default-features = false, features = ["async-await", "std"] }
bson       = { version = "2.9.0", features = ["chrono"] }
salvo-oapi = { version = "0.66.2", features = ["chrono"] }
tmdb-api   = { version = "0.7", git = "https://github.com/George-Miao/tmdb-api.git", rev = "af274c0" }
iso8601    = { version = "0.6.1", features = ["chrono"] }
camino     = { version = "1.1.6", features = ["serde", "serde1"] }
url        = { version = "2.5.0", features = ["serde"] }
reqwest    = { version = "0.11.23", features = ["json"] }
