[package]
name    = "bangumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde   = { version = "1.0.147", features = ["derive"] }

paste      = "1.0.9"
serde_json = "1.0.87"
thiserror  = "1.0.37"
tracing    = "0.1.37"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["test-util", "macros"] }
