[package]
name    = "bangumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde     = { version = "1.0.147", features = ["derive"] }
microtype = { version = "0.7.5", features = ["serde"] }

rustify_derive = { version = "0.5.2", git = "https://github.com/George-Miao/rustify/", package = "rustify_derive" }
rustify        = { version = "0.5.3", git = "https://github.com/George-Miao/rustify/" }

paste         = "1.0.9"
thiserror     = "1.0.37"
typed-builder = "0.11.0"

[dev-dependencies]
tap   = "1.0.1"
tokio = { version = "1.21.2", features = ["test-util", "macros"] }
