[package]
name    = "forrit-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bangumi = { version = "0.1.0", git = "https://github.com/George-Miao/forrit/", package = "bangumi" }

futures = { version = "0.3.25", default-features = false }
url     = { version = "2.3.1", features = ["serde"] }

mod_use     = "0.2.1"
paste       = "1.0.9"
regex       = "1.6.0"
serde       = "1.0.147"
serde_regex = "1.1.0"
serde_with  = "2.0.1"
thiserror   = "1.0.37"
