[package]
name    = "forrit-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forrit-core = { version = "0.1.0", path = "../forrit-core" }
bangumi     = { version = "0.1.0", path = "../bangumi" }

futures            = { version = "0.3.24", default-features = false, features = ["alloc", "std"] }
twelf              = { version = "0.7.0", default-features = false, features = ["env", "toml"] }
serde              = { version = "1.0.145", features = ["derive", "rc"] }
tokio              = { version = "1.21.2", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url                = { version = "2.3.1", features = ["serde"] }
toml               = { version = "0.5.9", features = ["preserve_order"] }
transmission-rpc   = { version = "0.4.0", features = ["sync"] }
diesel             = { version = "2.0.2", features = ["sqlite"] }

dirs               = "4.0.0"
mod_use            = "0.2.1"
paste              = "1.0.9"
regex              = "1.6.0"
reqwest            = "0.11.12"
serde_json         = "1.0.86"
serde_regex        = "1.1.0"
serde_with         = "2.0.1"
tap                = "1.0.1"
tracing            = "0.1.37"
humantime-serde    = "1.1.1"
actix-web          = "4.2.1"
actix-web-httpauth = "0.8.0"
sled               = "0.34.7"
nanoid             = "0.4.0"
thiserror          = "1.0.37"
pin-project-lite   = "0.2.9"
