[package]
name    = "forrit-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forrit-core        = { version = "0.1.0", path = "../forrit-core" }
serde              = { version = "1.0.160", default-features = false, features = ["derive"] }
tracing            = { version = "0.1.37", features = ["log"] }
twelf              = { version = "0.7.0", default-features = false, features = ["env", "toml"] }
transmission-rpc   = { version = "0.4.1", features = ["sync"] }
color-eyre         = { version = "0.6.2", default-features = false }
tokio              = { version = "1.27.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

bangumi              = "0.1.0"
qbit-rs              = "0.3.4"
ractor               = "0.7.5"
mongodb              = "2.4.0"
tap                  = "1.0.1"
mod_use              = "0.2.1"
async-trait          = "0.1.68"
url                  = "2.3.1"
humantime-serde      = "1.1.1"
dirs                 = "5.0.0"
thiserror            = "1.0.40"
regex                = "1.7.3"
reqwest              = "0.11.16"
poem                 = "1.3.55"
serde_with           = "2.3.2"
stream_throttle      = "0.4.0"
telegram-bot-raw-ars = "0.9.1"

[dev-dependencies]
dotenv     = "0.15.0"
serde_json = "1.0.96"
