[package]
name    = "forrit-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forrit-core = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
bson        = { workspace = true }
url         = { workspace = true }
tap         = { workspace = true }
futures     = { workspace = true }
serde_json  = { workspace = true }

thiserror         = "1.0.58"
reqwest-websocket = "0.2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
